src/test/resources/30/single/xhtml/valid/styleAttr001.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
    <head>
      <title>Test</title>
    </head>
    <body>
    	<p style="color:blue">BLUE</p>
    </body>
</html>
